<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="148dp"
        android:layout_height="43dp"
        android:layout_marginTop="10dp"
        android:text="@string/parametres"
        android:textSize="20sp"
        android:textAlignment="center"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TableLayout
        android:id="@+id/simpleTableLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="*"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        >
        <TableRow
            android:id="@+id/ThemeRow"
            tools:ignore="UselessParent">

            <TextView
                android:id="@+id/TextViewTheme"
                android:padding="18dip"
                android:text="@string/theme"
                android:textSize="18sp"
                android:textAlignment="center"/>

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/buttonLight"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/light_mode"
                    android:layout_marginEnd="10dp"
                    />

                <RadioButton
                    android:id="@+id/buttonDark"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/dark_mode"
                    android:layout_marginStart="10dp"/>
            </RadioGroup>
        </TableRow>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="#c0c0c0"/>

        <TableRow
            android:id="@+id/FontRow"
            tools:ignore="UselessParent">

            <TextView
                android:id="@+id/TextViewFont"
                android:padding="18dip"
                android:text="@string/taille_police"
                android:textSize="18sp"
                android:textAlignment="center"/>

            <Spinner
                android:id="@+id/font_spinner"
                android:layout_width="wrap_content"
                android:layout_height="match_parent" />

        </TableRow>
    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>