<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/textView"
        android:layout_width="148dp"
        android:layout_height="43dp"
        android:layout_marginTop="10dp"
        android:text="@string/vue_d_ensemble"
        android:textSize="20sp"
        android:textAlignment="center"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TableLayout
        android:id="@+id/simpleTableLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="*"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        > <!-- stretch the second column of the layout-->

        <!-- first row of the table layout-->
        <TableRow

            android:id="@+id/firstRow"
            tools:ignore="UselessParent">

            <!-- first element of the row-->
            <TextView

                android:id="@+id/simpleTextView"
                android:background="#E7E7E7"
                android:padding="18dip"
                android:text="@string/text_1"
                android:textColor="#000"
                android:textSize="12sp" />

            <ProgressBar
                android:id="@+id/pBar"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:max="100"
                android:progress="50"
                tools:ignore="MissingConstraints" />

        </TableRow>
        <TableRow

            android:id="@+id/secondRow"
            tools:ignore="UselessParent">

            <!-- first element of the row-->
            <TextView

                android:id="@+id/simpleTextView2"
                android:background="#CECECE"
                android:padding="18dip"
                android:text="@string/text_1"
                android:textColor="#000"
                android:textSize="12sp" />

            <ProgressBar
                android:id="@+id/pBar2"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:max="100"
                android:progress="50"
                tools:ignore="MissingConstraints" />

        </TableRow>
    </TableLayout>

    <Button
        android:id="@+id/options"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/options"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="10dp"/>

    <Button
        android:id="@+id/add_todolist"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:text="@string/addTodoList"
        app:layout_constraintTop_toBottomOf="@+id/simpleTableLayout"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"/>


</androidx.constraintlayout.widget.ConstraintLayout>